수정사항1. 상단바 고정 성공... 불태웠다 진짜... -header에서 center가 문제였는데.. Margin 없애고 Flex로 수정.. -이후 header전체 flex 수정후 space-between으로 양 옆으로 비율 고정!! -header에 position->fixed 설정 입력해줌. -상단바가 내리면 투명해서 background-color 하얀색 변경, z-index 설정해줘서 다른 요소들 위에 위치하도록 설정함. -끝!

--- a/style.css
+++ b/style.css
@@ -9,10 +9,16 @@ body {
 
 /* 사이드바 버튼 */
 #header{
+  width: 100%;
   height: 70px;
   display: flex;
+  justify-content: space-between;
   border-bottom: 2px solid #ab90bf;
-  background: #ffffff;
+  background-color: #ffffff;
+  position: fixed;
+  
+  z-index: 1000;
+  
 }
 
 #header .left{
@@ -77,9 +83,10 @@ body {
 
 /* 상단바 */
 #header .center{
-  width: 1600px;
+  width: 500px;
   margin-top: 10px;
-  margin-left: 530px;
+  display: flex;
+  justify-content: center;
   background: #ffffff;
 }
 
@@ -101,7 +108,7 @@ body {
 
 #header .right .box .sign-box{
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   margin-top: 15px;
   border-radius: 10px;
   background: #ffffff;
